HW2/y.output
Terminals unused in grammar

    TRUE
    FALSE
    IDENT
    VAR
    MUT_LIT


Rules useless in parser due to conflicts

  131 GlobalStatement: NEWLINE


State 4 conflicts: 4 reduce/reduce
State 10 conflicts: 1 shift/reduce
State 46 conflicts: 6 shift/reduce
State 87 conflicts: 1 shift/reduce
State 104 conflicts: 1 reduce/reduce
State 158 conflicts: 24 shift/reduce
State 208 conflicts: 15 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: %empty

    2 Program: $@1 GlobalStatementList

    3 GlobalStatementList: GlobalStatementList GlobalStatement
    4                    | GlobalStatement

    5 GlobalStatement: FunctionDeclStmt
    6                | NEWLINE

    7 Type: INT
    8     | FLOAT
    9     | STRING
   10     | BOOL
   11     | ADDR STRING

   12 binary_op: LOR
   13          | LAND
   14          | cmp_op
   15          | add_op
   16          | mul_op
   17          | shift_op

   18 shift_op: LSHIFT
   19         | RSHIFT

   20 cmp_op: EQL
   21       | NEQ
   22       | LSS
   23       | LEQ
   24       | GTR
   25       | GEQ

   26 add_op: ADD
   27       | SUB

   28 mul_op: MUL
   29       | DIV
   30       | REM

   31 unary_op: NOT

   32 Expression: UnaryExpr
   33           | UnaryExpr AS Type

   34 $@2: %empty

   35 Expression: Expression binary_op $@2 Expression

   36 UnaryExpr: PrimaryExpr
   37          | unary_op UnaryExpr
   38          | functionCall

   39 $@3: %empty

   40 functionCall: ID LPAREN $@3 ParameterListInFunctionCall RPAREN
   41             | ID LPAREN RPAREN

   42 ParameterListInFunctionCall: Operand
   43                            | Operand COMMA ParameterListInFunctionCall

   44 PrimaryExpr: Operand
   45            | ConversionExpr

   46 ConversionExpr: Type LPAREN Expression RPAREN

   47 Operand: Literal
   48        | ID
   49        | ADDR Operand LBRACK Interindex RBRACK

   50 $@4: %empty

   51 Operand: ID $@4 LBRACK Expression RBRACK
   52        | LPAREN Expression RPAREN

   53 $@5: %empty

   54 Interindex: DOTDOT $@5 Literal

   55 $@6: %empty

   56 Interindex: Literal DOTDOT $@6 Literal
   57           | Literal DOTDOT

   58 Literal: INT_LIT
   59        | FLOAT_LIT
   60        | BOOL_LIT
   61        | STRING_LIT

   62 assign_op: ASSIGN
   63          | ADD_ASSIGN
   64          | SUB_ASSIGN
   65          | MUL_ASSIGN
   66          | DIV_ASSIGN
   67          | REM_ASSIGN

   68 AssignmentStmt: ID assign_op Expression SEMICOLON

   69 IncDecStmt: Expression INC
   70           | Expression DEC

   71 StatementList: StatementList Statement
   72              | Statement

   73 Statement: DeclarationStmt
   74          | SimpleStmt
   75          | Block
   76          | IfStmt
   77          | ForStmt
   78          | SwitchStmt
   79          | CaseStmt
   80          | LetStatement LetStatementCon
   81          | PrintStmt
   82          | ReturnStmt
   83          | NEWLINE
   84          | WhileStmt
   85          | functionCall SEMICOLON
   86          | LOOPStatement

   87 LOOPStatement: BREAK Literal SEMICOLON

   88 DeclarationStmt: ID Type
   89                | ID Type assign_op Expression

   90 SimpleStmt: AssignmentStmt
   91           | ExpressionStmt
   92           | IncDecStmt

   93 $@7: %empty

   94 Block: LBRACE $@7 StatementList RBRACE

   95 IfStmt: IF Condition Block ELSE IfStmt
   96       | IF Condition Block
   97       | IF Condition Block ELSE Block

   98 WhileStmt: WHILE Condition Block

   99 ForStmt: FOR Condition Block ELSE Block
  100        | FOR ForClause Block ELSE Block
  101        | FOR ForClause LBRACE StatementList RBRACE

  102 ForClause: InitStmt SEMICOLON Condition SEMICOLON PostStmt
  103          | ID IN Operand

  104 InitStmt: SimpleStmt

  105 Condition: Expression

  106 PostStmt: SimpleStmt

  107 SwitchStmt: SWITCH Expression

  108 CaseStmt: CASE INT_LIT COLON Block
  109         | CASE DEFAULT COLON Block

  110 LetStatement: LET ID COLON Type ASSIGN Operand SEMICOLON
  111             | LET ID COLON Type SEMICOLON
  112             | LET MUT ID COLON Type ASSIGN Literal SEMICOLON
  113             | LET MUT ID COLON Type SEMICOLON
  114             | LET ID COLON Type ASSIGN SEMICOLON
  115             | LET MUT ID COLON Type ASSIGN SEMICOLON
  116             | LET MUT ID ASSIGN Operand SEMICOLON
  117             | LET ID COLON LBRACK Type SEMICOLON Operand RBRACK ASSIGN LBRACK LiteralList RBRACK SEMICOLON
  118             | LET ID ASSIGN Operand SEMICOLON
  119             | LET ID COLON Type ASSIGN LOOP Block SEMICOLON

  120 LiteralList: Literal COMMA LiteralList
  121            | Literal

  122 LetStatementCon: ASSIGN Literal SEMICOLON
  123                | %empty

  124 $@8: %empty

  125 PrintStmt: PRINT Expression $@8 SEMICOLON

  126 $@9: %empty

  127 PrintStmt: PRINTLN Expression $@9 SEMICOLON

  128 ReturnStmt: RETURN Expression SEMICOLON

  129 GlobalStatement: PackageStmt NEWLINE
  130                | FunctionDeclStmt NEWLINE
  131                | NEWLINE

  132 PackageStmt: PACKAGE ID

  133 FunctionDeclStmt: FuncOpen LPAREN RPAREN FuncBlock
  134                 | FuncOpen LPAREN ParameterList RPAREN Type FuncBlock
  135                 | FuncOpen LPAREN RPAREN ARROW Type FuncBlock
  136                 | FuncOpen LPAREN ParameterList RPAREN ARROW Type FuncBlock

  137 FuncOpen: FUNC ID

  138 ParameterList: ID COLON Type
  139              | ParameterList COMMA ID COLON Type

  140 FuncBlock: LBRACE StatementList RBRACE

  141 ExpressionStmt: Expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LET (258) 110 111 112 113 114 115 116 117 118 119
    MUT (259) 112 113 115 116
    NEWLINE (260) 6 83 129 130 131
    INT (261) 7
    FLOAT (262) 8
    BOOL (263) 10
    STRING (264) 9 11
    TRUE (265)
    FALSE (266)
    GTR (267) 24
    LSS (268) 22
    GEQ (269) 25
    LEQ (270) 23
    EQL (271) 20
    NEQ (272) 21
    LOR (273) 12
    LAND (274) 13
    ASSIGN (275) 62 110 112 114 115 116 117 118 119 122
    ADD_ASSIGN (276) 63
    SUB_ASSIGN (277) 64
    MUL_ASSIGN (278) 65
    DIV_ASSIGN (279) 66
    REM_ASSIGN (280) 67
    IF (281) 95 96 97
    ELSE (282) 95 97 99 100
    FOR (283) 99 100 101
    WHILE (284) 98
    LOOP (285) 119
    SWITCH (286) 107
    CASE (287) 108 109
    DEFAULT (288) 109
    PRINT (289) 125
    PRINTLN (290) 127
    ADDR (291) 11 49
    FUNC (292) 137
    RETURN (293) 128
    BREAK (294) 87
    ID (295) 40 41 48 51 68 88 89 103 110 111 112 113 114 115 116 117 118 119 132 137 138 139
    ARROW (296) 135 136
    AS (297) 33
    IN (298) 103
    DOTDOT (299) 54 56 57
    RSHIFT (300) 19
    LSHIFT (301) 18
    IDENT (302)
    LBRACE (303) 94 101 140
    RBRACE (304) 94 101 140
    LBRACK (305) 49 51 117
    RBRACK (306) 49 51 117
    LPAREN (307) 40 41 46 52 133 134 135 136
    RPAREN (308) 40 41 46 52 133 134 135 136
    INC (309) 69
    DEC (310) 70
    VAR (311)
    COLON (312) 108 109 110 111 112 113 114 115 117 119 138 139
    SEMICOLON (313) 68 85 87 102 110 111 112 113 114 115 116 117 118 119 122 125 127 128
    COMMA (314) 43 120 139
    PACKAGE (315) 132
    ADD (316) 26
    SUB (317) 27
    NOT (318) 31
    MUL (319) 28
    DIV (320) 29
    REM (321) 30
    INT_LIT <val> (322) 58 108
    FLOAT_LIT <val> (323) 59
    BOOL_LIT <val> (324) 60
    STRING_LIT <s_val> (325) 61
    MUT_LIT <mut_val> (326)


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    Program (73)
        on left: 2
        on right: 0
    $@1 (74)
        on left: 1
        on right: 2
    GlobalStatementList (75)
        on left: 3 4
        on right: 2 3
    GlobalStatement (76)
        on left: 5 6 129 130 131
        on right: 3 4
    Type <type> (77)
        on left: 7 8 9 10 11
        on right: 33 46 88 89 110 111 112 113 114 115 117 119 134 135 136 138 139
    binary_op <op> (78)
        on left: 12 13 14 15 16 17
        on right: 35
    shift_op <op> (79)
        on left: 18 19
        on right: 17
    cmp_op <op> (80)
        on left: 20 21 22 23 24 25
        on right: 14
    add_op <op> (81)
        on left: 26 27
        on right: 15
    mul_op <op> (82)
        on left: 28 29 30
        on right: 16
    unary_op <op> (83)
        on left: 31
        on right: 37
    Expression <val> (84)
        on left: 32 33 35
        on right: 35 46 51 52 68 69 70 89 105 107 125 127 128 141
    $@2 (85)
        on left: 34
        on right: 35
    UnaryExpr <val> (86)
        on left: 36 37 38
        on right: 32 33 37
    functionCall (87)
        on left: 40 41
        on right: 38 85
    $@3 (88)
        on left: 39
        on right: 40
    ParameterListInFunctionCall (89)
        on left: 42 43
        on right: 40 43
    PrimaryExpr <val> (90)
        on left: 44 45
        on right: 36
    ConversionExpr <val> (91)
        on left: 46
        on right: 45
    Operand <val> (92)
        on left: 47 48 49 51 52
        on right: 42 43 44 49 103 110 116 117 118
    $@4 (93)
        on left: 50
        on right: 51
    Interindex (94)
        on left: 54 56 57
        on right: 49
    $@5 (95)
        on left: 53
        on right: 54
    $@6 (96)
        on left: 55
        on right: 56
    Literal <val> (97)
        on left: 58 59 60 61
        on right: 47 54 56 57 87 112 120 121 122
    assign_op <op> (98)
        on left: 62 63 64 65 66 67
        on right: 68 89
    AssignmentStmt (99)
        on left: 68
        on right: 90
    IncDecStmt (100)
        on left: 69 70
        on right: 92
    StatementList (101)
        on left: 71 72
        on right: 71 94 101 140
    Statement (102)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 71 72
    LOOPStatement (103)
        on left: 87
        on right: 86
    DeclarationStmt (104)
        on left: 88 89
        on right: 73
    SimpleStmt (105)
        on left: 90 91 92
        on right: 74 104 106
    Block (106)
        on left: 94
        on right: 75 95 96 97 98 99 100 108 109 119
    $@7 (107)
        on left: 93
        on right: 94
    IfStmt (108)
        on left: 95 96 97
        on right: 76 95
    WhileStmt (109)
        on left: 98
        on right: 84
    ForStmt (110)
        on left: 99 100 101
        on right: 77
    ForClause (111)
        on left: 102 103
        on right: 100 101
    InitStmt (112)
        on left: 104
        on right: 102
    Condition (113)
        on left: 105
        on right: 95 96 97 98 99 102
    PostStmt (114)
        on left: 106
        on right: 102
    SwitchStmt (115)
        on left: 107
        on right: 78
    CaseStmt (116)
        on left: 108 109
        on right: 79
    LetStatement (117)
        on left: 110 111 112 113 114 115 116 117 118 119
        on right: 80
    LiteralList (118)
        on left: 120 121
        on right: 117 120
    LetStatementCon (119)
        on left: 122 123
        on right: 80
    PrintStmt <type> (120)
        on left: 125 127
        on right: 81
    $@8 (121)
        on left: 124
        on right: 125
    $@9 (122)
        on left: 126
        on right: 127
    ReturnStmt (123)
        on left: 128
        on right: 82
    PackageStmt (124)
        on left: 132
        on right: 129
    FunctionDeclStmt (125)
        on left: 133 134 135 136
        on right: 5 130
    FuncOpen <s_val> (126)
        on left: 137
        on right: 133 134 135 136
    ParameterList <s_val> (127)
        on left: 138 139
        on right: 134 136 139
    FuncBlock (128)
        on left: 140
        on right: 133 134 135 136
    ExpressionStmt (129)
        on left: 141
        on right: 91


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 . GlobalStatementList

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5
    PACKAGE  shift, and go to state 6

    GlobalStatementList  go to state 7
    GlobalStatement      go to state 8
    PackageStmt          go to state 9
    FunctionDeclStmt     go to state 10
    FuncOpen             go to state 11


State 3

    0 $accept: Program $end .

    $default  accept


State 4

    6 GlobalStatement: NEWLINE .
  131                | NEWLINE .

    $end      reduce using rule 6 (GlobalStatement)
    $end      [reduce using rule 131 (GlobalStatement)]
    NEWLINE   reduce using rule 6 (GlobalStatement)
    NEWLINE   [reduce using rule 131 (GlobalStatement)]
    FUNC      reduce using rule 6 (GlobalStatement)
    FUNC      [reduce using rule 131 (GlobalStatement)]
    PACKAGE   reduce using rule 6 (GlobalStatement)
    PACKAGE   [reduce using rule 131 (GlobalStatement)]
    $default  reduce using rule 6 (GlobalStatement)


State 5

  137 FuncOpen: FUNC . ID

    ID  shift, and go to state 12


State 6

  132 PackageStmt: PACKAGE . ID

    ID  shift, and go to state 13


State 7

    2 Program: $@1 GlobalStatementList .
    3 GlobalStatementList: GlobalStatementList . GlobalStatement

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5
    PACKAGE  shift, and go to state 6

    $default  reduce using rule 2 (Program)

    GlobalStatement   go to state 14
    PackageStmt       go to state 9
    FunctionDeclStmt  go to state 10
    FuncOpen          go to state 11


State 8

    4 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 4 (GlobalStatementList)


State 9

  129 GlobalStatement: PackageStmt . NEWLINE

    NEWLINE  shift, and go to state 15


State 10

    5 GlobalStatement: FunctionDeclStmt .
  130                | FunctionDeclStmt . NEWLINE

    NEWLINE  shift, and go to state 16

    NEWLINE   [reduce using rule 5 (GlobalStatement)]
    $default  reduce using rule 5 (GlobalStatement)


State 11

  133 FunctionDeclStmt: FuncOpen . LPAREN RPAREN FuncBlock
  134                 | FuncOpen . LPAREN ParameterList RPAREN Type FuncBlock
  135                 | FuncOpen . LPAREN RPAREN ARROW Type FuncBlock
  136                 | FuncOpen . LPAREN ParameterList RPAREN ARROW Type FuncBlock

    LPAREN  shift, and go to state 17


State 12

  137 FuncOpen: FUNC ID .

    $default  reduce using rule 137 (FuncOpen)


State 13

  132 PackageStmt: PACKAGE ID .

    $default  reduce using rule 132 (PackageStmt)


State 14

    3 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


State 15

  129 GlobalStatement: PackageStmt NEWLINE .

    $default  reduce using rule 129 (GlobalStatement)


State 16

  130 GlobalStatement: FunctionDeclStmt NEWLINE .

    $default  reduce using rule 130 (GlobalStatement)


State 17

  133 FunctionDeclStmt: FuncOpen LPAREN . RPAREN FuncBlock
  134                 | FuncOpen LPAREN . ParameterList RPAREN Type FuncBlock
  135                 | FuncOpen LPAREN . RPAREN ARROW Type FuncBlock
  136                 | FuncOpen LPAREN . ParameterList RPAREN ARROW Type FuncBlock

    ID      shift, and go to state 18
    RPAREN  shift, and go to state 19

    ParameterList  go to state 20


State 18

  138 ParameterList: ID . COLON Type

    COLON  shift, and go to state 21


State 19

  133 FunctionDeclStmt: FuncOpen LPAREN RPAREN . FuncBlock
  135                 | FuncOpen LPAREN RPAREN . ARROW Type FuncBlock

    ARROW   shift, and go to state 22
    LBRACE  shift, and go to state 23

    FuncBlock  go to state 24


State 20

  134 FunctionDeclStmt: FuncOpen LPAREN ParameterList . RPAREN Type FuncBlock
  136                 | FuncOpen LPAREN ParameterList . RPAREN ARROW Type FuncBlock
  139 ParameterList: ParameterList . COMMA ID COLON Type

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 21

  138 ParameterList: ID COLON . Type

    INT     shift, and go to state 27
    FLOAT   shift, and go to state 28
    BOOL    shift, and go to state 29
    STRING  shift, and go to state 30
    ADDR    shift, and go to state 31

    Type  go to state 32


State 22

  135 FunctionDeclStmt: FuncOpen LPAREN RPAREN ARROW . Type FuncBlock

    INT     shift, and go to state 27
    FLOAT   shift, and go to state 28
    BOOL    shift, and go to state 29
    STRING  shift, and go to state 30
    ADDR    shift, and go to state 31

    Type  go to state 33


State 23

  140 FuncBlock: LBRACE . StatementList RBRACE

    LET         shift, and go to state 34
    NEWLINE     shift, and go to state 35
    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    IF          shift, and go to state 36
    FOR         shift, and go to state 37
    WHILE       shift, and go to state 38
    SWITCH      shift, and go to state 39
    CASE        shift, and go to state 40
    PRINT       shift, and go to state 41
    PRINTLN     shift, and go to state 42
    ADDR        shift, and go to state 43
    RETURN      shift, and go to state 44
    BREAK       shift, and go to state 45
    ID          shift, and go to state 46
    LBRACE      shift, and go to state 47
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type             go to state 54
    unary_op         go to state 55
    Expression       go to state 56
    UnaryExpr        go to state 57
    functionCall     go to state 58
    PrimaryExpr      go to state 59
    ConversionExpr   go to state 60
    Operand          go to state 61
    Literal          go to state 62
    AssignmentStmt   go to state 63
    IncDecStmt       go to state 64
    StatementList    go to state 65
    Statement        go to state 66
    LOOPStatement    go to state 67
    DeclarationStmt  go to state 68
    SimpleStmt       go to state 69
    Block            go to state 70
    IfStmt           go to state 71
    WhileStmt        go to state 72
    ForStmt          go to state 73
    SwitchStmt       go to state 74
    CaseStmt         go to state 75
    LetStatement     go to state 76
    PrintStmt        go to state 77
    ReturnStmt       go to state 78
    ExpressionStmt   go to state 79


State 24

  133 FunctionDeclStmt: FuncOpen LPAREN RPAREN FuncBlock .

    $default  reduce using rule 133 (FunctionDeclStmt)


State 25

  134 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN . Type FuncBlock
  136                 | FuncOpen LPAREN ParameterList RPAREN . ARROW Type FuncBlock

    INT     shift, and go to state 27
    FLOAT   shift, and go to state 28
    BOOL    shift, and go to state 29
    STRING  shift, and go to state 30
    ADDR    shift, and go to state 31
    ARROW   shift, and go to state 80

    Type  go to state 81


State 26

  139 ParameterList: ParameterList COMMA . ID COLON Type

    ID  shift, and go to state 82


State 27

    7 Type: INT .

    $default  reduce using rule 7 (Type)


State 28

    8 Type: FLOAT .

    $default  reduce using rule 8 (Type)


State 29

   10 Type: BOOL .

    $default  reduce using rule 10 (Type)


State 30

    9 Type: STRING .

    $default  reduce using rule 9 (Type)


State 31

   11 Type: ADDR . STRING

    STRING  shift, and go to state 83


State 32

  138 ParameterList: ID COLON Type .

    $default  reduce using rule 138 (ParameterList)


State 33

  135 FunctionDeclStmt: FuncOpen LPAREN RPAREN ARROW Type . FuncBlock

    LBRACE  shift, and go to state 23

    FuncBlock  go to state 84


State 34

  110 LetStatement: LET . ID COLON Type ASSIGN Operand SEMICOLON
  111             | LET . ID COLON Type SEMICOLON
  112             | LET . MUT ID COLON Type ASSIGN Literal SEMICOLON
  113             | LET . MUT ID COLON Type SEMICOLON
  114             | LET . ID COLON Type ASSIGN SEMICOLON
  115             | LET . MUT ID COLON Type ASSIGN SEMICOLON
  116             | LET . MUT ID ASSIGN Operand SEMICOLON
  117             | LET . ID COLON LBRACK Type SEMICOLON Operand RBRACK ASSIGN LBRACK LiteralList RBRACK SEMICOLON
  118             | LET . ID ASSIGN Operand SEMICOLON
  119             | LET . ID COLON Type ASSIGN LOOP Block SEMICOLON

    MUT  shift, and go to state 85
    ID   shift, and go to state 86


State 35

   83 Statement: NEWLINE .

    $default  reduce using rule 83 (Statement)


State 36

   95 IfStmt: IF . Condition Block ELSE IfStmt
   96       | IF . Condition Block
   97       | IF . Condition Block ELSE Block

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 88
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62
    Condition       go to state 90


State 37

   99 ForStmt: FOR . Condition Block ELSE Block
  100        | FOR . ForClause Block ELSE Block
  101        | FOR . ForClause LBRACE StatementList RBRACE

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 91
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 92
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62
    AssignmentStmt  go to state 63
    IncDecStmt      go to state 64
    SimpleStmt      go to state 93
    ForClause       go to state 94
    InitStmt        go to state 95
    Condition       go to state 96
    ExpressionStmt  go to state 79


State 38

   98 WhileStmt: WHILE . Condition Block

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 88
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62
    Condition       go to state 97


State 39

  107 SwitchStmt: SWITCH . Expression

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 98
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62


State 40

  108 CaseStmt: CASE . INT_LIT COLON Block
  109         | CASE . DEFAULT COLON Block

    DEFAULT  shift, and go to state 99
    INT_LIT  shift, and go to state 100


State 41

  125 PrintStmt: PRINT . Expression $@8 SEMICOLON

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 101
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62


State 42

  127 PrintStmt: PRINTLN . Expression $@9 SEMICOLON

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 102
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62


State 43

   11 Type: ADDR . STRING
   49 Operand: ADDR . Operand LBRACK Interindex RBRACK

    STRING      shift, and go to state 83
    ADDR        shift, and go to state 103
    ID          shift, and go to state 104
    LPAREN      shift, and go to state 48
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Operand  go to state 105
    Literal  go to state 62


State 44

  128 ReturnStmt: RETURN . Expression SEMICOLON

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 106
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62


State 45

   87 LOOPStatement: BREAK . Literal SEMICOLON

    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Literal  go to state 107


State 46

   40 functionCall: ID . LPAREN $@3 ParameterListInFunctionCall RPAREN
   41             | ID . LPAREN RPAREN
   48 Operand: ID .
   51        | ID . $@4 LBRACK Expression RBRACK
   68 AssignmentStmt: ID . assign_op Expression SEMICOLON
   88 DeclarationStmt: ID . Type
   89                | ID . Type assign_op Expression

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ASSIGN      shift, and go to state 108
    ADD_ASSIGN  shift, and go to state 109
    SUB_ASSIGN  shift, and go to state 110
    MUL_ASSIGN  shift, and go to state 111
    DIV_ASSIGN  shift, and go to state 112
    REM_ASSIGN  shift, and go to state 113
    ADDR        shift, and go to state 31
    LPAREN      shift, and go to state 114

    INT       [reduce using rule 48 (Operand)]
    FLOAT     [reduce using rule 48 (Operand)]
    BOOL      [reduce using rule 48 (Operand)]
    STRING    [reduce using rule 48 (Operand)]
    ADDR      [reduce using rule 48 (Operand)]
    LBRACK    reduce using rule 50 ($@4)
    LPAREN    [reduce using rule 48 (Operand)]
    $default  reduce using rule 48 (Operand)

    Type       go to state 115
    $@4        go to state 116
    assign_op  go to state 117


State 47

   94 Block: LBRACE . $@7 StatementList RBRACE

    $default  reduce using rule 93 ($@7)

    $@7  go to state 118


State 48

   52 Operand: LPAREN . Expression RPAREN

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    Expression      go to state 119
    UnaryExpr       go to state 57
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62


State 49

   31 unary_op: NOT .

    $default  reduce using rule 31 (unary_op)


State 50

   58 Literal: INT_LIT .

    $default  reduce using rule 58 (Literal)


State 51

   59 Literal: FLOAT_LIT .

    $default  reduce using rule 59 (Literal)


State 52

   60 Literal: BOOL_LIT .

    $default  reduce using rule 60 (Literal)


State 53

   61 Literal: STRING_LIT .

    $default  reduce using rule 61 (Literal)


State 54

   46 ConversionExpr: Type . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 120


State 55

   37 UnaryExpr: unary_op . UnaryExpr

    INT         shift, and go to state 27
    FLOAT       shift, and go to state 28
    BOOL        shift, and go to state 29
    STRING      shift, and go to state 30
    ADDR        shift, and go to state 43
    ID          shift, and go to state 87
    LPAREN      shift, and go to state 48
    NOT         shift, and go to state 49
    INT_LIT     shift, and go to state 50
    FLOAT_LIT   shift, and go to state 51
    BOOL_LIT    shift, and go to state 52
    STRING_LIT  shift, and go to state 53

    Type            go to state 54
    unary_op        go to state 55
    UnaryExpr       go to state 121
    functionCall    go to state 89
    PrimaryExpr     go to state 59
    ConversionExpr  go to state 60
    Operand         go to state 61
    Literal         go to state 62


State 56

   35 Expression: Expression . binary_op $@2 Expression
   69 IncDecStmt: Expression . INC
   70           | Expression . DEC
  141 ExpressionStmt: Expression .

    GTR     shift, and go to state 122
    LSS     shift, and go to state 123
    GEQ     shift, and go to state 124
    LEQ     shift, and go to state 125
    EQL     shift, and go to state 126
    NEQ     shift, and go to state 127
    LOR     shift, and go to state 128
    LAND    shift, and go to state 129
    RSHIFT  shift, and go to state 130
    LSHIFT  shift, and go to state 131
    INC     shift, and go to state 132
    DEC     shift, and go to state 133
    ADD     shift, and go to state 134
    SUB     shift, and go to state 135
    MUL     shift, and go to state 136
    DIV     shift, and go to state 137
    REM     shift, and go to state 138

    $default  reduce using rule 141 (ExpressionStmt)

    binary_op  go to state 139
    shift_op   go to state 140
    cmp_op     go to state 141
    add_op     go to state 142
    mul_op     go to state 143


State 57

   32 Expression: UnaryExpr .
   33           | UnaryExpr . AS Type

    AS  shift, and go to state 144

    $default  reduce using rule 32 (Expression)


State 58

   38 UnaryExpr: functionCall .
   85 Statement: functionCall . SEMICOLON

    SEMICOLON  shift, and go to state 145

    $default  reduce using rule 38 (UnaryExpr)


State 59

   36 UnaryExpr: PrimaryExpr .

    $default  reduce using rule 36 (UnaryExpr)


State 60

   45 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 45 (PrimaryExpr)


State 61

   44 PrimaryExpr: Operand .

    $default  reduce using rule 44 (PrimaryExpr)


State 62

   47 Operand: Literal .

    $default  reduce using rule 47 (Operand)


State 63
